--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask==1.0.2
-Flask-Injector==0.12.0
+Flask==2.2.2
+Flask-Injector==0.14.0
 Flask-Jsonpify==1.5.0
-Flask-RESTful==0.3.7
-Flask-SQLAlchemy==2.4.0
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
 SQLAlchemy==1.3.3
+MarkupSafe==2.1.1
+jinja2==3.0.0
