--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.10
@@ -22,7 +22,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi #pytests could go under this step
   docker:
         needs: build
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
           -
             name: Checkout
@@ -48,7 +48,7 @@ jobs:
               tags: sadminriley/images:app-${{ github.run_number }}
   modifygit:
     needs: docker
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
         name: changing the deployment of git repo
